--- a/index.html
+++ b/index.html
@@ -70,6 +70,28 @@
       object-fit: contain;
       margin-bottom: 1rem;
     }
+    .brand-header {
+  padding: 1rem 1rem 0.5rem;
+  text-align: center;
+  background-color: var(--brand-color, #ffffff); /* Optional if per-brand */
+}
+
+.brand-header img {
+  height: 100px;           /* Force visible height */
+  width: auto;             /* Maintain aspect ratio */
+  max-width: 90%;          /* Don’t overflow horizontally */
+  object-fit: contain;     /* Prevents distortion */
+  display: inline-block;
+}
+
+.brand-body {
+  background: #fffaf2;
+  padding: 1.5rem;
+  text-align: center;
+  border-radius: 0 0 12px 12px;
+}
+
+
     .buttons a {
       display: inline-block;
       margin: 0.3rem 0.25rem;
@@ -148,10 +170,7 @@
   color: #6d4c41;
   cursor: pointer;
 }
-.brand-header img {
-  max-height: 80px;
-  padding: 0.5rem 0;
-}
+
 
   </style>
 </head>
@@ -166,42 +185,50 @@
 
   <section id="brands" class="brand-section">
     <div class="brand">
-      <div class="brand-header" style="background:#000000;">
-  <img src="assets/images/food_affair_logo.png" alt="Food Affair logo">
-</div>
-      <p>Dine‑in • Online • Jain, Vegan, Satvik options</p>
-      <div class="buttons">
-        <a href="http://food-affair.in" target="_blank">Website</a>
-        <a href="https://www.zomato.com/bangalore/food-affair-1-btm-bangalore" target="_blank">Zomato</a>
-        <a href="https://www.swiggy.com/restaurants/food-affair-btm-layout-bangalore-229422" target="_blank">Swiggy</a>
-        <a href="https://www.eazydiner.com/bengaluru/food-affair-veg-family-restaurant-btm-south-bengaluru-669910" target="_blank">EazyDiner</a>
-      </div>
-      <div class="review">⭐ 4.5 • 700+ Google reviews</div>
-      <div class="map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62203.1991042479!2d77.55130241701906!3d12.91209574783088!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae157bfbcb8e75%3A0x8c8c02d2fc8b802f!2sFood%20Affair%20-%20Veg%20Family%20Restaurant!5e0!3m2!1sen!2sin!4v1718792481677!5m2!1sen!2sin" loading="lazy" allowfullscreen></iframe>
-      </div>
+  <div class="brand-header" style="background:#000000;">
+    <img src="assets/images/food_affair_logo.png" alt="Food Affair logo">
+  </div>
+  <div class="brand-body">
+    <p>Dine‑in • Online • Jain, Vegan, Satvik options</p>
+    <div class="buttons">
+      <a href="http://food-affair.in" target="_blank">Website</a>
+      <a href="https://www.zomato.com/bangalore/food-affair-1-btm-bangalore" target="_blank">Zomato</a>
+      <a href="https://www.swiggy.com/restaurants/food-affair-btm-layout-bangalore-229422" target="_blank">Swiggy</a>
+      <a href="https://www.eazydiner.com/bengaluru/food-affair-veg-family-restaurant-btm-south-bengaluru-669910" target="_blank">EazyDiner</a>
     </div>
-    <div class="brand">
-      <div class="brand-header" style="background:#5e684d;">
-  <img src="assets/images/Jain_Food_House_logo.png" alt="Jain Food House logo">
-</div>
-      <p>100% Jain cuisine — no onion, no garlic. Delivery only.</p>
-      <div class="buttons">
-        <a href="https://www.zomato.com/bangalore/jain-food-house-bannerghatta-road-bangalore" target="_blank">Zomato</a>
-        <a href="https://www.swiggy.com/city/bangalore/jain-food-court-vijaya-bank-colony-bilekahalli-rest532809" target="_blank">Swiggy</a>
-      </div>
+    <div class="review">⭐ 4.5 • 700+ Google reviews</div>
+    <div class="map">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62203.1991042479!2d77.55130241701906!3d12.91209574783088!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae157bfbcb8e75%3A0x8c8c02d2fc8b802f!2sFood%20Affair%20-%20Veg%20Family%20Restaurant!5e0!3m2!1sen!2sin!4v1718792481677!5m2!1sen!2sin" loading="lazy" allowfullscreen></iframe>
     </div>
+  </div>
+</div>
 
-    <div class="brand">
-      <div class="brand-header" style="background:#ffe135;">
-            <img src="assets/images/Wok-Of-Love-Final-Logo.png" alt="Wok Of Love logo">
-        </div>
-      <p>Pure‑veg Indo‑Chinese • Bold, fiery, flavor‑packed</p>
-      <div class="buttons">
-        <a href="https://www.zomato.com/bangalore/wok-of-love-bannerghatta-road-bangalore" target="_blank">Zomato</a>
-        <a href="https://www.swiggy.com/city/bangalore/wok-of-love-btm-4th-stage-arekere-rest966202" target="_blank">Swiggy</a>
-      </div>
+<div class="brand">
+  <div class="brand-header" style="background:#5e684d;">
+    <img src="assets/images/Jain_Food_House_logo.png" alt="Jain Food House logo">
+  </div>
+  <div class="brand-body">
+    <p>100% Jain cuisine — no onion, no garlic. Delivery only.</p>
+    <div class="buttons">
+      <a href="https://www.zomato.com/bangalore/jain-food-house-bannerghatta-road-bangalore" target="_blank">Zomato</a>
+      <a href="https://www.swiggy.com/city/bangalore/jain-food-court-vijaya-bank-colony-bilekahalli-rest532809" target="_blank">Swiggy</a>
     </div>
+  </div>
+</div>
+
+<div class="brand">
+  <div class="brand-header" style="background:#ffe135;">
+    <img src="assets/images/Wok-Of-Love-Final-Logo.png" alt="Wok Of Love logo">
+  </div>
+  <div class="brand-body">
+    <p>Pure‑veg Indo‑Chinese • Bold, fiery, flavor‑packed</p>
+    <div class="buttons">
+      <a href="https://www.zomato.com/bangalore/wok-of-love-bannerghatta-road-bangalore" target="_blank">Zomato</a>
+      <a href="https://www.swiggy.com/city/bangalore/wok-of-love-btm-4th-stage-arekere-rest966202" target="_blank">Swiggy</a>
+    </div>
+  </div>
+</div>
+
   </section>
 
   <section id="specialties">
