--- a/index.html
+++ b/index.html
@@ -227,42 +227,103 @@
   </section>
 
   <section id="specialties">
-    <h2 class="carousel-title">Some of Our Specialties</h2>
-    <div class="carousel-wrapper">
-      <img src="assets/images/Bhindi Do Pyaza.jpg" alt="Bhindi Do Pyaza">
-      <img src="assets/images/Corn Cheese Balls.jpg" alt="Corn Cheese Balls">
-      <img src="assets/images/Cream Of Mushroom.jpg" alt="Cream Of Mushroom">
-      <img src="assets/images/Cream of Tomato.jpg" alt="Cream of Tomato">
-      <img src="assets/images/Dal Makhni.jpg" alt="Dal Makhni">
-      <img src="assets/images/Dal tadka.jpg" alt="Dal tadka">
-      <img src="assets/images/Gobi Amritsari.JPG" alt="Gobi Amritsari">
-      <img src="assets/images/Gobi Masala.jpg" alt="Gobi Masala">
-      <img src="assets/images/Green Salad.jpg" alt="Green Salad">
-      <img src="assets/images/Hara Bhara Kabab.jpg" alt="Hara Bhara Kabab">
-      <img src="assets/images/Kadhai Paneer 1.jpg" alt="Kadhai Paneer 1">
-      <img src="assets/images/Kadhai Paneer.jpg" alt="Kadhai Paneer">
-      <img src="assets/images/Kadhai Veg.jpg" alt="Kadhai Veg">
-      <img src="assets/images/Kathi Spring Rolls.jpg" alt="Kathi Spring Rolls">
-      <img src="assets/images/Khimchi Salad.JPG" alt="Khimchi Salad">
-      <img src="assets/images/Lassi.jpg" alt="Lassi">
-      <img src="assets/images/Makai Khash Tikki.JPG" alt="Makai Khash Tikki">
-      <img src="assets/images/Manchou Soup.jpg" alt="Manchou Soup">
-      <img src="assets/images/Mushroom Chilly.jpg" alt="Mushroom Chilly">
-      <img src="assets/images/Nimbu Pudina Shikanji.jpg" alt="Nimbu Pudina Shikanji">
-      <img src="assets/images/Paneer Cheese Balls.jpg" alt="Paneer Cheese Balls">
-      <img src="assets/images/Paneer Lababdar.jpg" alt="Paneer Lababdar">
-      <img src="assets/images/Paneer Pudina Tikka.jpg" alt="Paneer Pudina Tikka">
-      <img src="assets/images/Paneer Tikka Masala.jpg" alt="Paneer Tikka Masala">
-      <img src="assets/images/Rajma Chawal.jpg" alt="Rajma Chawal">
-      <img src="assets/images/Stuffed Paratha.jpg" alt="Stuffed Paratha">
-      <img src="assets/images/Thali.jpg" alt="Thali">
-      <img src="assets/images/Veg Hakka Noodles.jpg" alt="Veg Hakka Noodles">
-      <img src="assets/images/Veg Kofta.jpg" alt="Veg Kofta">
-      <img src="assets/images/Veg Momos.jpg" alt="Veg Momos">
-      <img src="assets/images/Veg Pakora.jpg" alt="Veg Pakora">
-      <img src="assets/images/Veg Thali.jpg" alt="Veg Thali">
-    </div>
-  </section>
+  <h2 class="carousel-title">Some of Our Specialties</h2>
+  <div class="carousel-wrapper">
+    <picture>
+      <source srcset="assets/images/webp-output/Bhindi Do Pyaza.webp" type="image/webp">
+      <img src="assets/images/Bhindi Do Pyaza.jpg" alt="Bhindi Do Pyaza" loading="lazy">
+    </picture>
+    <picture>
+      <source srcset="assets/images/webp-output/Corn Cheese Balls.webp" type="image/webp">
+      <img src="assets/images/Corn Cheese Balls.jpg" alt="Corn Cheese Balls" loading="lazy">
+    </picture>
+    <picture>
+      <source srcset="assets/images/webp-output/Cream Of Mushroom.webp" type="image/webp">
+      <img src="assets/images/Cream Of Mushroom.jpg" alt="Cream Of Mushroom" loading="lazy">
+    </picture>
+    <picture>
+      <source srcset="assets/images/webp-output/Cream of Tomato.webp" type="image/webp">
+      <img src="assets/images/Cream of Tomato.jpg" alt="Cream of Tomato" loading="lazy">
+    </picture>
+    <picture>
+      <source srcset="assets/images/webp-output/Dal Makhni.webp" type="image/webp">
+      <img src="assets/images/Dal Makhni.jpg" alt="Dal Makhni" loading="lazy">
+    </picture>
+    <picture>
+      <source srcset="assets/images/webp-output/Dal tadka.webp" type="image/webp">
+      <img src="assets/images/Dal tadka.jpg" alt="Dal tadka" loading="lazy">
+    </picture>
+    <picture>
+      <source srcset="assets/images/webp-output/Gobi Amritsari.webp" type="image/webp">
+      <img src="assets/images/Gobi Amritsari.JPG" alt="Gobi Amritsari" loading="lazy">
+    </picture>
+    <picture>
+      <source srcset="assets/images/webp-output/Gobi Masala.webp" type="image/webp">
+      <img src="assets/images/Gobi Masala.jpg" alt="Gobi Masala" loading="lazy">
+    </picture>
+    <picture>
+      <source srcset="assets/images/webp-output/Green Salad.webp" type="image/webp">
+      <img src="assets/images/Green Salad.jpg" alt="Green Salad" loading="lazy">
+    </picture>
+    <picture>
+      <source srcset="assets/images/webp-output/Hara Bhara Kabab.webp" type="image/webp">
+      <img src="assets/images/Hara Bhara Kabab.jpg" alt="Hara Bhara Kabab" loading="lazy">
+    </picture>
+    <picture>
+      <source srcset="assets/images/webp-output/Kadhai Paneer 1.webp" type="image/webp">
+      <img src="assets/images/Kadhai Paneer 1.jpg" alt="Kadhai Paneer 1" loading="lazy">
+    </picture>
+    <picture>
+      <source srcset="assets/images/webp-output/Kadhai Paneer.webp" type="image/webp">
+      <img src="assets/images/Kadhai Paneer.jpg" alt="Kadhai Paneer" loading="lazy">
+    </picture>
+    <picture>
+      <source srcset="assets/images/webp-output/Kadhai Veg.webp" type="image/webp">
+      <img src="assets/images/Kadhai Veg.jpg" alt="Kadhai Veg" loading="lazy">
+    </picture>
+    <picture>
+      <source srcset="assets/images/webp-output/Kathi Spring Rolls.webp" type="image/webp">
+      <img src="assets/images/Kathi Spring Rolls.jpg" alt="Kathi Spring Rolls" loading="lazy">
+    </picture>
+    <picture>
+      <source srcset="assets/images/webp-output/Khimchi Salad.webp" type="image/webp">
+      <img src="assets/images/Khimchi Salad.JPG" alt="Khimchi Salad" loading="lazy">
+    </picture>
+    <picture>
+      <source srcset="assets/images/webp-output/Lassi.webp" type="image/webp">
+      <img src="assets/images/Lassi.jpg" alt="Lassi" loading="lazy">
+    </picture>
+    <picture>
+      <source srcset="assets/images/webp-output/Makai Khash Tikki.webp" type="image/webp">
+      <img src="assets/images/Makai Khash Tikki.JPG" alt="Makai Khash Tikki" loading="lazy">
+    </picture>
+    <picture>
+      <source srcset="assets/images/webp-output/Manchou Soup.webp" type="image/webp">
+      <img src="assets/images/Manchou Soup.jpg" alt="Manchou Soup" loading="lazy">
+    </picture>
+    <picture>
+      <source srcset="assets/images/webp-output/Mushroom Chilly.webp" type="image/webp">
+      <img src="assets/images/Mushroom Chilly.jpg" alt="Mushroom Chilly" loading="lazy">
+    </picture>
+    <picture>
+      <source srcset="assets/images/webp-output/Nimbu Pudina Shikanji.webp" type="image/webp">
+      <img src="assets/images/Nimbu Pudina Shikanji.jpg" alt="Nimbu Pudina Shikanji" loading="lazy">
+    </picture>
+    <picture>
+      <source srcset="assets/images/webp-output/Paneer Cheese Balls.webp" type="image/webp">
+      <img src="assets/images/Paneer Cheese Balls.jpg" alt="Paneer Cheese Balls" loading="lazy">
+    </picture>
+    <picture>
+      <source srcset="assets/images/webp-output/Paneer Lababdar.webp" type="image/webp">
+      <img src="assets/images/Paneer Lababdar.jpg" alt="Paneer Lababdar" loading="lazy">
+    </picture>
+    <picture>
+      <source srcset="assets/images/webp-output/Paneer Pudina Tikka.webp" type="image/webp">
+      <img src="assets/images/Paneer Pudina Tikka.jpg" alt="Paneer Pudina Tikka" loading="lazy">
+    </picture>
+  </div>
+</section>
+
   <!-- ===== OVERLAYS ===== -->
   <div id="about" class="overlay" onclick="closeOverlay('about')">
     <div class="overlay-content" onclick="event.stopPropagation()">
