faster loading in logos too

--- a/index.html
+++ b/index.html
@@ -181,7 +181,10 @@
   <section id="brands" class="brand-section">
     <div class="brand" style="--brand-color:#000000;">
   <div class="brand-header" >
-    <img src="assets/images/food_affair_logo.png" alt="Food Affair logo">
+    <picture>
+  <source srcset="assets/images/webp-output/food_affair_logo.webp" type="image/webp">
+  <img src="assets/images/food_affair_logo.png" alt="Food Affair logo" loading="lazy">
+</picture>
   </div>
   <div class="brand-body">
     <p>Dine‑in • Online • Jain, Vegan, Satvik options</p>
@@ -200,7 +203,11 @@
 
 <div class="brand"  style="--brand-color:#5e684d;">
   <div class="brand-header">
-    <img src="assets/images/Jain_Food_House_logo.png" alt="Jain Food House logo">
+    <picture>
+  <source srcset="assets/images/webp-output/Jain_Food_House_logo.webp" type="image/webp">
+  <img src="assets/images/Jain_Food_House_logo.png" alt="Jain Food House logo" loading="lazy">
+</picture>
+    
   </div>
   <div class="brand-body">
     <p>100% Jain cuisine — no onion, no garlic. Delivery only.</p>
@@ -213,7 +220,13 @@
 
 <div class="brand"  style="--brand-color:#ffe135;">
   <div class="brand-header">
-    <img src="assets/images/Wok-Of-Love-Final-Logo.png" alt="Wok Of Love logo">
+    <picture>
+  <source srcset="assets/images/webp-output/Wok-Of-Love-Final-Logo.webp" type="image/webp">
+  <img src="assets/images/Wok-Of-Love-Final-Logo.png" alt="Wok Of Love Final Logo" loading="lazy">
+</picture>
+
+
+
   </div>
   <div class="brand-body">
     <p>Pure‑veg Indo‑Chinese • Bold, fiery, flavor‑packed</p>
